bugzid: 14347 Add service method to detect filter queries ignoring the root_only query